--- a/nipun.css
+++ b/nipun.css
@@ -3,10 +3,10 @@
 	max-height:100%;
 	background-color: #414048;
 	
-	transition-duration: .5s;
+	transition-duration: 1s;
 	scroll-behavior: smooth;
 	z-index: 1;
-	padding: 100px;
+	padding: 100px 5%;
 	opacity:1;
 
 }
